tests/type_errors/indirect_sort_bools.nos
# expect_error: Bool does not implement Ord
# Indirect sort through generic wrapper should detect Ord violation
applySort(xs) = xs.sort()
main() = show(applySort([true, false, true]))
